# OneMKL-FFT-Benchmark

./: CMakeLists.txt  LICENSE  Readme.md  compile_and_run.sh  result.txt  result_intel.txt  result_ryzen.txt
src/: CMakeLists.txt  global.hpp  main.cpp  onedfti.cpp  onedfti.hpp  onedfti_c2c.cpp  onedfti_c2c.hpp  rng.cpp  rng.hpp  soft_fft.cpp  soft_fft.hpp  stat.hpp  time_test.hpp
